# ml-educator

./: NEXT_STEPS.md  README.md  pyproject.toml
src/autoresearch_edu/: __init__.py  annotator.py  cli.py  commentary.py  concepts.py  curriculum.py  diff_analyzer.py  llm_explain.py  quiz.py  spaced_repetition.py
src/ml_educator/: annotator.py  cli.py  commentary.py  concepts.py  curriculum.py  diff_analyzer.py  llm_explain.py  quiz.py  visualizations.py
tests/: test_annotator.py  test_cli.py  test_commentary.py  test_concepts.py  test_curriculum.py  test_diff_analyzer.py  test_llm_explain.py  test_new_concepts.py  test_quiz.py  test_spaced_repetition.py  test_visualizations.py  test_yaml_concepts.py
