[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch-edu"
version = "0.1.0"
description = "Educational mode for autoresearch - explains ML reasoning"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "matplotlib>=3.5",
    "anthropic>=0.20",
]

[project.scripts]
autoresearch-edu = "autoresearch_edu.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
